<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/logInScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="113dp"
        android:text="Log In"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FFFFFF"
        android:textSize="65sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginBottom="204dp"
        android:background="#FFFFFF"
        android:gravity="start"
        android:hint="Email"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#858585"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginBottom="121dp"
        android:background="#FFFFFF"
        android:gravity="start"
        android:hint="Password"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#858585"
        android:textSize="36sp" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="82dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="38dp"
        android:background="@drawable/next" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="68dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/backarrow" />

    <TextView
        android:id="@+id/logInError"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailBox"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:text="The email or password you entered is incorrect."
        android:textColor="#F44336"
        android:textSize="20sp"
        android:visibility="invisible" />

</RelativeLayout>