<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:clickable="false"
    android:id="@+id/homeScreen">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <!--  <include android:layout="@layout/navigation_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
-->

  <TextView
      android:id="@+id/text1"
      android:layout_width="291dp"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="71dp"
      android:layout_marginLeft="71dp"
      android:layout_marginTop="47dp"
      android:gravity="center_horizontal"
      android:text="You've used your Sanity Scale"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="#000000"
      android:textSize="36sp" />

  <Button
      android:id="@+id/weeklyAvgBtn"
      android:layout_width="310dp"
      android:layout_height="78dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="60dp"
      android:layout_marginLeft="60dp"
      android:layout_marginBottom="82dp"
      android:background="#65B1D2"
      android:text="View Weekly Average"
      android:textAllCaps="false"
      android:textColor="#FFFFFF"
      android:textSize="30sp" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="324dp"
      android:layout_height="221dp"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentBottom="true"
      android:layout_marginEnd="47dp"
      android:layout_marginRight="47dp"
      android:layout_marginBottom="234dp"
      android:layout_centerHorizontal="true"
      app:srcCompat="@drawable/circle"/>

  <TextView
      android:id="@+id/numberTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/imageView2"
      android:layout_alignTop="@+id/imageView2"
      android:layout_alignRight="@+id/imageView2"
      android:layout_alignBottom="@+id/imageView2"
      android:layout_margin="1dp"
      android:gravity="center"
      android:textColor="#000000"
      android:textSize="150sp" />
  />

  <TextView
      android:id="@+id/text2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="88dp"
      android:layout_marginLeft="88dp"
      android:layout_marginBottom="172dp"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="#000000"
      android:textSize="36sp" />



  <TextView
      android:id="@+id/errorMessage"
      android:layout_width="370dp"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="25dp"
      android:layout_marginLeft="25dp"
      android:layout_marginBottom="23dp"
      android:gravity="center_horizontal"
      android:text="You can only view your average once a week for 15 mins."
      android:textColor="#F44336"
      android:visibility="invisible" />

</RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        android:id="@+id/nav_view"/>




</androidx.drawerlayout.widget.DrawerLayout>